--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "Very minimal starter for React applications",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --progress --colors",
-    "clean": "rimraf dist node_modules",
+    "dev": "webpack-dev-server --progress --colors --env.env=dev",
+    "prebuild": "rimraf dist",
+    "build": "cross-env NODE_ENV=production webpack -p --env.env=prod",
     "test": "jest ./src"
   },
   "author": "Maxwell Cady",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2",
     "jest-cli": "^22.4.2",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-delay-render": "^0.1.2",
+    "react-dom": "^16.2.0",
+    "react-imported-component": "^4.0.1",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -23,12 +26,18 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "chalk": "^2.3.2",
+    "cross-env": "^5.1.3",
     "css-loader": "^0.28.10",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.4",
     "jest": "^22.4.2",
+    "jest-css-modules": "^1.1.0",
     "node-sass": "^4.7.2",
+    "postcss-loader": "^2.1.1",
     "react-hot-loader": "^4.0.0",
     "react-test-renderer": "^16.2.0",
     "rimraf": "^2.6.2",
@@ -37,9 +46,13 @@
     "webpack": "^4.0.1",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.0",
+    "webpack-merge": "^4.1.2",
     "webpack-node-externals": "^1.6.0"
   },
   "jest": {
-    "setupTestFrameworkScriptFile": "./src/enzyme.setup.js"
+    "setupTestFrameworkScriptFile": "./src/enzyme.setup.js",
+    "transform": {
+      ".*": "<rootDir>/node_modules/jest-css-modules"
+    }
   }
 }
